[package]
name = "rKNX"
version = "0.1.3"
edition = "2024"
description = "KNX IP Protocol implementation for embedded systems with Rust"
repository = "https://github.com/Wesxt/rKNX"
license = "Apache-2.0"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.14.0"
# The CI careers to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
  "x86_64-unknown-linux-musl",
  "aarch64-unknown-linux-musl",
  "armv7-unknown-linux-gnueabihf"
]
# Extra static files to include in each release archive
include = ["init/rknx.service", "init/install.sh", "config.example.toml"]

[lib]
name = "rknx"
path = "src/lib.rs"

[dependencies]
byteorder = "1.5"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
hidapi = { version = "2.6", optional = true }
rumqttc = "0.24"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-serial = { version = "5.4", optional = true }
tokio-tungstenite = "0.21"
toml = "0.8"

[features]
default = []
hardware = ["serial", "usb"]
serial = ["tokio-serial"]
usb = ["hidapi"]

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
